[gd_scene load_steps=10 format=3 uid="uid://ue4eajljk6rf"]

[ext_resource type="Script" path="res://scenes/objects/experience_vial/experience_vial.gd" id="1_ax0ry"]
[ext_resource type="PackedScene" uid="uid://cefsg5yb2fms8" path="res://scenes/components/random_audio_player_2d_component.tscn" id="2_2142m"]
[ext_resource type="Texture2D" uid="uid://wnmdmt3p0nni" path="res://scenes/objects/experience_vial/experience_vial.png" id="2_l17lq"]
[ext_resource type="AudioStream" uid="uid://bpcelbvejus7i" path="res://assets/audio/effects/vial_pickup/impactGeneric_light_000.ogg" id="3_dge0y"]
[ext_resource type="AudioStream" uid="uid://cutcgfcmvep4s" path="res://assets/audio/effects/vial_pickup/impactGeneric_light_001.ogg" id="4_snoxk"]
[ext_resource type="AudioStream" uid="uid://bp6ivy5s2162r" path="res://assets/audio/effects/vial_pickup/impactGeneric_light_002.ogg" id="5_31x80"]
[ext_resource type="AudioStream" uid="uid://hr77jby2ymjk" path="res://assets/audio/effects/vial_pickup/impactGeneric_light_003.ogg" id="6_5ffpj"]
[ext_resource type="AudioStream" uid="uid://b285oueue0l0d" path="res://assets/audio/effects/vial_pickup/impactGeneric_light_004.ogg" id="7_psblt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dealh"]

[node name="ExperienceVial" type="Node2D"]
script = ExtResource("1_ax0ry")

[node name="PickupAudioPlayerComponent" parent="." instance=ExtResource("2_2142m")]
volume_db = -3.0
audio_streams = Array[AudioStream]([ExtResource("3_dge0y"), ExtResource("4_snoxk"), ExtResource("5_31x80"), ExtResource("6_5ffpj"), ExtResource("7_psblt")])

[node name="ExperienceArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="ExperienceCollider" type="CollisionShape2D" parent="ExperienceArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_dealh")

[node name="ExperienceSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_l17lq")
